# workflow-orchestration-queue-india87

./: AGENTS.md  README.md  pyproject.toml  workflow-orchestration-queue-india87.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
docs/: F1-feature-full-dev-plan.md  F1-full-dev-plan_(OPENCODE).md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: implementation-plan.md  non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md  zulu48-fix-plan.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  interactive-report.html
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/queue/: __init__.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_github_queue.py  test_work_item.py
